Revision history for BioX-Workflow

{{$NEXT}}

1.0.1  2016-06-08 10:33:36 GST
    - Added fix for when file supplied by --workflow doesn't exist

1.0  2016-06-06 15:19:54 GST
    - Migrating to github
    - Added fix for when using --select_rules that INPUT/OUTPUT are still looped

0.27  2016-04-25 11:54:18 GST
    - Added fix for saving env only as a var

0.26  2016-04-24 14:35:27 GST
    - Added option to number rules 001,002,003, etc

0.25  2016-02-18 14:20:03 GST
    - Made major changes and updates to documentation

0.24  2016-02-18 12:14:28 GST
    - Added bugfix for wait: 0

0.23  2016-01-21 12:12:41 GST
    - Stupid regexp were broken

0.22  2016-01-20 11:38:49 GST
    - Made change so indir/outdir, and any vars ending in _dir will be coereced
      as absolute path

0.21  2016-01-04 12:14:12 GST
    - Added minmode, like in Drake

0.20  2015-12-23 10:08:58 GST
    - Made a change to looking at dirs for samples

0.19  2015-12-16 13:55:12 GST
    - Added Slurp to dependencies

0.18  2015-12-09 13:32:02 GST
    - Fixed a test - samples were in a different order each time...

0.17  2015-12-09 12:49:15 GST
    - Wrote tests and made a fix for local vars

0.16  2015-11-30 10:45:01 GST
    - Bug fix on special indir/outdir vars

0.15  2015-11-29 11:28:25 GST
    Bug fix - Data::Pairs making shallow copies so added Storable to cpanfile

0.14  2015-11-25 12:19:54 GST
    Made some more changes to local_attr and outdir/indir

0.13  2015-11-25 10:53:46 GST
    Made some changes to local attr

0.12  2015-11-23 10:09:39 GST
    - Added global attr to eval call

0.11  2015-11-22 13:01:23 GST
    - Fixed override process

0.10  2015-11-19 12:37:46 GST
    - Lots of code refactoring for new plugin system!

0.09  2015-11-15 12:52:24 GST
    - Bug fix for by_sample_dir and evaling indirs/outdirs with Text::Template

0.08  2015-11-11 11:22:42 GST
    - Added in a BUG fix for indir/outdir not having a clearer method
    - WHY DONT I JUST USE LAZY_BUILD
