@@ -1,6 +1,7 @@
 Revision history for BioX-Workflow
 
 {{$NEXT}}
+    - Added getopt option for plugins
 
 1.0.1  2016-06-08 10:33:36 GST
     - Added fix for when file supplied by --workflow doesn't exist
